--- a/mathgame/index.html
+++ b/mathgame/index.html
@@ -1,7 +1,7 @@
 <head>
   <title>Math Game</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
+  <link rel='stylesheet' href='styles.css'></link>
 </head>
 
 <body>
@@ -25,65 +25,65 @@
   </script>
 
   <header>
-    <nav class="navbar navbar-static-top navbar-inverse" id="top" role="banner">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse"> 
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button> 
-          <a href="index.html" class="navbar-brand">Fun Math Game</a>
+    <nav class='navbar navbar-static-top navbar-inverse' id='top' role='banner'>
+      <div class='container'>
+        <div class='navbar-header'>
+          <button class='navbar-toggle collapsed' type='button' data-toggle='collapse' data-target='.bs-navbar-collapse'>
+            <span class='sr-only'>Toggle navigation</span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+          </button>
+          <a href='index.html' class='navbar-brand'>Fun Math Game</a>
 
         </div>
-        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-          <ul class="nav navbar-nav">
-            <li><a href="help.html">Help</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="scores.html">Scores</a></li>
-            <li><a href="faq.html">FAQs</a></li>
+        <nav class='collapse navbar-collapse bs-navbar-collapse' role='navigation'>
+          <ul class='nav navbar-nav'>
+            <li><a href='help.html'>Help</a></li>
+            <li><a href='achievements.html'>Achievements</a></li>
+            <li><a href='scores.html'>Scores</a></li>
+            <li><a href='faq.html'>FAQs</a></li>
           </ul>
         </nav>
       </div>
     </nav>
   </header>
- 
-  <h1 class="text-center">Math Game</h1>
-  
+
+  <h1 class='text-center'>Math Game</h1>
+
   <main>
-    <div class="notification"></div>
-    <div class="game-info">
-      <p id="level">
-        <span id="score"></span>
-        <span id="high-score"></span>
+    <div id='notification'></div>
+    <div id='game-info'>
+      <p id='level'>
+        <span id='score'></span>
+        <span id='high-score'></span>
       </p>
     </div>
 
-    <div id="game-block"></div>
+    <div id='game-block'></div>
 
-    <div id="controls"></div>
-    
-    <div class="options">
-      <button class="btn btn-primary" id="new-game" onclick="startGame()">New Game</button>  
-      <a class="btn btn-success" id="help" href="help.html">How To Play</a>
-      <a class="btn btn-warning" id="achievements" href="achievements.html">Achievements</a>
-      <a class="btn btn-danger" id="top-scores" href="scores.html">Top Scores</a>
+    <div id='controls'></div>
+
+    <div id='options'>
+      <button class='btn btn-primary' id='new-game' onclick='startGame()'>New Game</button>
+      <a class='btn btn-success' id='help' href='help.html'>How To Play</a>
+      <a class='btn btn-warning' id='achievements' href='achievements.html'>Achievements</a>
+      <a class='btn btn-danger' id='top-scores' href='scores.html'>Top Scores</a>
     </div>
 
-    <div id="fb-container">
-      <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
+    <div id='fb-container'>
+      <div class='fb-like' data-share='true' data-width='450' data-show-faces='true'></div>
     </div>
-  
+
   </main>
-  
+
   <footer>
-    <p class="text-center">Written by Richard G. Hamilton - Front End Web Developer</p>
+    <p class='text-center'>Written by Richard G. Hamilton - Front End Web Developer</p>
   </footer>
-  
+
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script src="math.js"></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
+  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+  <script src='math.js'></script>
 
 </body>
